--- a/mobile/3-Tasks/addtasks.html
+++ b/mobile/3-Tasks/addtasks.html
@@ -629,22 +629,96 @@ document.addEventListener("DOMContentLoaded", async () => {
     return;
   }
 
-  // Fetch tasks from backend instead of localStorage
-  let tasks = [];
-  try {
-    const response = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(currentAdmin)}`);
-    const data = await response.json();
-    tasks = data.tasks || [];
-  } catch (err) {
-    console.error("Failed to fetch tasks:", err);
-  }
+  populateUsers();
 
   const editTask = JSON.parse(localStorage.getItem("familyApp_editTask"));
   if (editTask) {
-    // ... your existing pre-fill logic ...
-  }
+    document.getElementById("taskTitle").value = editTask.title || "";
+    document.getElementById("taskNotes").value = editTask.notes || "";
+    document.getElementById("roomSelection").value = editTask.room || "";
+    document.getElementById("selectRoom").textContent = editTask.room || "Select";
+    document.getElementById("repeatSelection").value = editTask.repeat || "";
+    document.getElementById("selectRepeat").textContent = editTask.repeat || "Select";
+    document.getElementById("settingsSelection").value = editTask.settings || "";
+    document.getElementById("selectSettings").textContent = editTask.settings || "Select";
+    document.getElementById("taskReminder").checked = !!editTask.reminder;
+    document.getElementById("addAlarmBtn").style.display = editTask.reminder ? "inline-block" : "none";
+    document.getElementById("RewardValue").value = editTask.reward || "";
+    document.getElementById("selectReward").textContent = editTask.reward ? `Reward: ${editTask.reward} 🍯` : "Reward";
 
-  populateUsers(); // make sure this still runs
+    // Handle times per day/week/month
+    document.getElementById("timesPerDayInput").value = editTask.timesPerDay || "1";
+    document.getElementById("timesPerWeekInput").value = editTask.timesPerWeek || "1";
+    document.getElementById("timesPerMonthInput").value = editTask.timesPerMonth || "1";
+    document.getElementById("timesPerDayGroup").style.display = editTask.repeat === "Daily" ? "flex" : "none";
+    document.getElementById("timesPerWeekGroup").style.display = editTask.repeat === "Weekly" ? "flex" : "none";
+    document.getElementById("timesPerMonthGroup").style.display = editTask.repeat === "Monthly" ? "flex" : "none";
+
+    // Handle date
+    if (editTask.date) {
+      const [from, to] = editTask.date.split(" to ");
+      document.getElementById("taskDate").value = from || "";
+      flatpickrFrom.setDate(from);
+      document.getElementById("dateDisplay").textContent = new Date(from).toLocaleDateString(undefined, {
+        month: "long",
+        day: "numeric",
+      });
+      if (to) {
+        dateMode = "from-to";
+        document.getElementById("dateModeToggle").textContent = "From - To";
+        document.getElementById("dateDisplayTo").style.display = "inline-block";
+        document.getElementById("taskDateTo").value = to;
+        flatpickrTo.setDate(to);
+        document.getElementById("dateDisplayTo").textContent = new Date(to).toLocaleDateString(undefined, {
+          month: "long",
+          day: "numeric",
+        });
+      } else {
+        dateMode = "from";
+        document.getElementById("dateModeToggle").textContent = "From";
+        document.getElementById("dateDisplayTo").style.display = "none";
+      }
+    }
+
+    // Handle users
+    if (editTask.users) {
+      selectedUsers = [...editTask.users];
+      updateSelectedUsersDisplay();
+    }
+
+    // Handle alarms
+    if (editTask.alarms?.length) {
+      alarms = [...editTask.alarms];
+      alarms.forEach((time) => {
+        const alarmWrapper = document.createElement("div");
+        alarmWrapper.style.marginBottom = "10px";
+        alarmWrapper.style.display = "flex";
+        alarmWrapper.style.alignItems = "center";
+        const alarmInput = document.createElement("input");
+        alarmInput.type = "time";
+        alarmInput.value = time;
+        alarmInput.style.marginRight = "10px";
+        alarmInput.style.padding = "10px";
+        alarmInput.style.border = "2px solid var(--primary-color)";
+        alarmInput.style.borderRadius = "8px";
+        alarmInput.style.background = "var(--accent-color)";
+        const removeButton = document.createElement("button");
+        removeButton.textContent = "Remove";
+        removeButton.style.padding = "5px 10px";
+        removeButton.style.backgroundColor = "var(--danger-color)";
+        removeButton.style.color = "var(--accent-color)";
+        removeButton.style.border = "none";
+        removeButton.style.borderRadius = "8px";
+        removeButton.addEventListener("click", () => {
+          alarmWrapper.remove();
+          alarms = alarms.filter((a) => a !== time);
+        });
+        alarmWrapper.appendChild(alarmInput);
+        alarmWrapper.appendChild(removeButton);
+        alarmContainer.appendChild(alarmWrapper);
+      });
+    }
+  }
 });
 
 
@@ -1066,7 +1140,6 @@ window.addEventListener('click', (e) => {
     .split(",")
     .map(u => u.trim())
     .filter(u => u);
-
   const reward = document.getElementById("RewardValue").value;
   let timesPerDay = parseInt(document.getElementById("timesPerDayInput").value) || null;
   let timesPerWeek = parseInt(document.getElementById("timesPerWeekInput").value) || null;
@@ -1089,19 +1162,48 @@ window.addEventListener('click', (e) => {
   const currentAdmin = localStorage.getItem("currentAdminEmail");
 
   const task = {
-    title, notes, room, repeat, settings,
-    date: dateValue, reminder, users, reward, alarms,
-    timesPerDay, timesPerWeek, timesPerMonth
+    title,
+    notes,
+    room,
+    repeat,
+    settings,
+    date: dateValue,
+    reminder,
+    users,
+    reward,
+    alarms,
+    timesPerDay,
+    timesPerWeek,
+    timesPerMonth,
   };
 
-  // Clear edit mode if present
-  localStorage.removeItem("familyApp_editTask");
+  const editTask = JSON.parse(localStorage.getItem("familyApp_editTask"));
+  if (editTask) {
+    // Delete the old task if title or date changed
+    const oldTitle = editTask.title;
+    const oldDate = editTask.date.split(" to ")[0];
+    if (oldTitle !== title || oldDate !== dateFrom) {
+      await fetch(
+        `https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(
+          currentAdmin
+        )}&title=${encodeURIComponent(oldTitle)}&date=${encodeURIComponent(oldDate)}`,
+        {
+          method: "DELETE",
+          headers: { "Content-Type": "application/json" },
+        }
+      );
+    }
+  }
 
   await fetch("https://beemazing.onrender.com/api/tasks", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ adminEmail: currentAdmin, task })
+    body: JSON.stringify({ adminEmail: currentAdmin, task }),
   });
+
+  // Clear edit mode
+  localStorage.removeItem("familyApp_editTask");
+  localStorage.removeItem("familyApp_editTask_index");
 
   alert("Task saved successfully!");
   window.location.href = "tasks.html";
