--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>BeeMazing</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <style>
         * {
             margin: 0;
@@ -479,6 +480,7 @@ body {
         
     </style>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 </head>
 <body>
     <div class="date-header">
@@ -569,7 +571,11 @@ async function loadTasksForDate(selectedDate) {
         const from = parseLocalDate(range[0]);
         const to = range[1] ? parseLocalDate(range[1]) : new Date(3000, 0, 1);
         const selected = parseLocalDate(selectedDate);
-        return selected >= from && selected <= to;
+        const inRange = selected >= from && selected <= to;
+        if (task.repeat === "Daily" && task.specificDates) {
+            return inRange && task.specificDates.includes(selectedDate);
+        }
+        return inRange;
     });
 
     if (visibleTasks.length === 0) {
@@ -583,19 +589,24 @@ async function loadTasksForDate(selectedDate) {
         taskDiv.dataset.taskTitle = task.title;
         taskDiv.dataset.taskDate = task.date;
 
+
         let currentTurn;
-        if (task.repeat === "Daily" && task.timesPerDay === 1) {
-            const dateRange = task.date.split(" to ");
-            const startDateStr = dateRange[0];
-            const startDate = parseLocalDate(startDateStr);
-            const currentDate = parseLocalDate(selectedDate);
-            const diffDays = Math.floor((currentDate - startDate) / (1000 * 60 * 60 * 24));
-            const userOrder = [...task.users];
-            const currentIndex = diffDays % userOrder.length;
-            currentTurn = userOrder[currentIndex];
-        } else {
-            currentTurn = task.tempTurnReplacement?.replacement || task.turn || task.users[0];
-        }
+if (task.repeat === "Daily" && task.timesPerDay === 1 && !task.specificDates) {
+    const dateRange = task.date.split(" to ");
+    const startDateStr = dateRange[0];
+    const startDate = parseLocalDate(startDateStr);
+    const currentDate = parseLocalDate(selectedDate);
+    const diffDays = Math.floor((currentDate - startDate) / (1000 * 60 * 60 * 24));
+    const userOrder = [...task.users];
+    const currentIndex = diffDays % userOrder.length;
+    currentTurn = userOrder[currentIndex];
+} else if (task.repeat === "Daily" && task.specificDates) {
+    const specificIndex = task.specificDates.indexOf(selectedDate);
+    const userOrder = [...task.users];
+    currentTurn = userOrder[specificIndex % userOrder.length] || task.users[0];
+} else {
+    currentTurn = task.tempTurnReplacement?.replacement || task.turn || task.users[0];
+}
 
         let repeatLimit = 1;
         if (task.repeat === "Daily") repeatLimit = task.timesPerDay || 1;
@@ -806,49 +817,41 @@ async function showTaskDetails(task) {
     const selectedDate = document.querySelector(".day.selected")?.dataset.date;
     if (!selectedDate) return;
 
-    // Parse dates for comparison
     function parseLocalDate(dateStr) {
         const [year, month, day] = dateStr.split("-").map(Number);
         return new Date(year, month - 1, day);
     }
 
-    // Get the start date of the task (use task.date's "from" date if it's a range)
     const dateRange = task.date.split(" to ");
     const startDateStr = dateRange[0];
     const startDate = parseLocalDate(startDateStr);
-
-    // Calculate the current turn based on the selected date
     const currentDate = parseLocalDate(selectedDate);
     const diffDays = Math.floor((currentDate - startDate) / (1000 * 60 * 60 * 24));
     const userOrder = [...task.users];
 
-    // For a "Daily" task with 1 time per day, rotate the turn based on the day difference
     let currentIndex;
-    if (task.repeat === "Daily" && task.timesPerDay === 1) {
-        currentIndex = diffDays % userOrder.length;
-    } else {
-        // Fallback to the stored turn if the task isn't a daily 1-time-per-day task
-        const storedTurn = task.turn || task.users[0];
-        currentIndex = userOrder.indexOf(storedTurn);
-    }
+if (task.repeat === "Daily" && task.timesPerDay === 1 && !task.specificDates) {
+    currentIndex = diffDays % userOrder.length;
+} else if (task.repeat === "Daily" && task.specificDates) {
+    const specificIndex = task.specificDates.indexOf(selectedDate);
+    currentIndex = specificIndex >= 0 ? specificIndex % userOrder.length : 0;
+} else {
+    const storedTurn = task.turn || task.users[0];
+    currentIndex = userOrder.indexOf(storedTurn);
+}
 
     const currentUser = userOrder[currentIndex];
-
-    // Calculate the next user in the turn order
     const nextIndex = (currentIndex + 1) % userOrder.length;
     const nextUser = userOrder[nextIndex];
 
-    // Get completions for the selected date
     const completedRaw = task.completions?.[selectedDate] || [];
     const completedUsers = Array.isArray(completedRaw) ? completedRaw : [];
 
-    // Determine required times for the task
     let requiredTimes = 1;
     if (task.repeat === "Daily") requiredTimes = task.timesPerDay || 1;
     if (task.repeat === "Weekly") requiredTimes = task.timesPerWeek || 1;
     if (task.repeat === "Monthly") requiredTimes = task.timesPerMonth || 1;
 
-    // Build the task details HTML
     let taskDetails = "";
     if (task.title) taskDetails += `<strong>Title:</strong> ${task.title}<br>`;
     if (task.notes) taskDetails += `<strong>Notes:</strong> ${task.notes}<br>`;
@@ -862,6 +865,9 @@ async function showTaskDetails(task) {
         if (task.repeat === "Monthly" && task.timesPerMonth)
             taskDetails += ` - ${task.timesPerMonth} time(s) per month`;
         taskDetails += "<br>";
+    }
+    if (task.specificDates && task.repeat === "Daily") {
+        taskDetails += `<strong>Calendar:</strong> <button id="showCalendarBtn" style="background: none; border: none; color: var(--primary-color); cursor: pointer;">Show Plan</button><br>`;
     }
     if (task.settings) taskDetails += `<strong>Settings:</strong> ${task.settings}<br>`;
     if (task.date) taskDetails += `<strong>Date:</strong> ${task.date}<br>`;
@@ -902,6 +908,44 @@ async function showTaskDetails(task) {
         }
     });
 
+    const showCalendarBtn = document.getElementById("showCalendarBtn");
+    if (showCalendarBtn) {
+        showCalendarBtn.addEventListener("click", () => {
+            const calendarModal = document.createElement("div");
+            calendarModal.className = "task-modal";
+            calendarModal.innerHTML = `
+                <div class="modal-content">
+                    <h3>Task Schedule</h3>
+                    <div id="taskCalendar" style="margin: 10px 0;"></div>
+                    <button id="closeCalendarBtn" style="padding: 6px 10px; background: var(--danger-color); color: var(--accent-color); border-radius: 6px; border: none; cursor: pointer;">Close</button>
+                </div>
+            `;
+            document.body.appendChild(calendarModal);
+
+            flatpickr("#taskCalendar", {
+                mode: "multiple",
+                dateFormat: "Y-m-d",
+                defaultDate: task.specificDates,
+                inline: true,
+                disable: [],
+                enable: task.specificDates.map(d => new Date(d)),
+                onReady: function() {
+                    this.calendarContainer.style.pointerEvents = "none"; // Read-only
+                }
+            });
+
+            document.getElementById("closeCalendarBtn").addEventListener("click", () => {
+                calendarModal.remove();
+            });
+
+            calendarModal.addEventListener("click", (e) => {
+                if (e.target === calendarModal) {
+                    calendarModal.remove();
+                }
+            });
+        });
+    }
+
     document.getElementById("editTurnBtn").addEventListener("click", () => {
         modal.remove();
         showEditTurnModal(task);
@@ -922,8 +966,6 @@ async function showTaskDetails(task) {
         });
     }
 }
-
-
 
 
 
