--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -748,13 +748,6 @@ const nextUser = userOrder[(currentIndex + 1) % userOrder.length];
 
 
 
-
-
-
-
-
-
-
 function getTurnForDate(task, selectedDateStr) {
     const formatDate = (d) => d.toISOString().split("T")[0];
     const todayStr = formatDate(new Date());
@@ -763,75 +756,59 @@ function getTurnForDate(task, selectedDateStr) {
     const completions = task.completions || {};
     const turnByDate = task.turnByDate || {};
 
-    // If there's an explicit turn override for this date, use it
-    if (turnByDate[selectedStr]) {
-        return turnByDate[selectedStr];
-    }
-
     const startDate = new Date(task.date.split(" to ")[0]);
     let currentIndex = userOrder.indexOf(task.turn || userOrder[0]);
     if (currentIndex === -1) currentIndex = 0;
 
-    // Calculate turn up to selected date
+    // Calculate turn up to the day before the selected date
     const d = new Date(startDate);
-    while (d <= new Date(selectedDateStr)) {
+    const selectedDate = new Date(selectedDateStr);
+    while (d < selectedDate) {
         const dStr = formatDate(d);
 
-        // Use explicit turn if set
         if (turnByDate[dStr]) {
             currentIndex = userOrder.indexOf(turnByDate[dStr]);
         } else {
-            // Check completions for this date
             const completedUsers = Array.isArray(completions[dStr]) ? completions[dStr] : [];
-            if (completedUsers.length > 0) {
-                // Advance turn for each completion
-                completedUsers.forEach(() => {
-                    currentIndex = (currentIndex + 1) % userOrder.length;
-                });
-            } else if (dStr < selectedStr) {
-                // For past days with no completions, assume turn persists
-                // No change in index
+            const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
+                               task.repeat === "Weekly" ? task.timesPerWeek || 1 :
+                               task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
+
+            // Advance turn for each completion on that day, up to repeatLimit
+            const advanceCount = Math.min(completedUsers.length, repeatLimit);
+            for (let i = 0; i < advanceCount; i++) {
+                currentIndex = (currentIndex + 1) % userOrder.length;
             }
         }
 
         d.setDate(d.getDate() + 1);
     }
 
-    // For future dates, assume perfect completions from today onward
-    if (selectedStr > todayStr) {
+    // For the selected date itself
+    if (turnByDate[selectedStr]) {
+        currentIndex = userOrder.indexOf(turnByDate[selectedStr]);
+    } else {
+        const completedUsers = Array.isArray(completions[selectedStr]) ? completions[selectedStr] : [];
         const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
                            task.repeat === "Weekly" ? task.timesPerWeek || 1 :
                            task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
 
-        const daysDiff = Math.floor((new Date(selectedStr) - new Date(todayStr)) / (1000 * 60 * 60 * 24));
-        for (let i = 0; i < daysDiff * repeatLimit; i++) {
-            currentIndex = (currentIndex + 1) % userOrder.length;
+        // If we're on today or a past date, use the current number of completions
+        if (selectedStr <= todayStr) {
+            const advanceCount = Math.min(completedUsers.length, repeatLimit);
+            for (let i = 0; i < advanceCount; i++) {
+                currentIndex = (currentIndex + 1) % userOrder.length;
+            }
+        } else {
+            // For future dates, assume perfect completions from today onward
+            const daysDiff = Math.floor((selectedDate - new Date(todayStr)) / (1000 * 60 * 60 * 24));
+            for (let i = 0; i < daysDiff * repeatLimit; i++) {
+                currentIndex = (currentIndex + 1) % userOrder.length;
+            }
         }
     }
 
     return userOrder[currentIndex];
-}
-
-function getTurnForPastOrToday(task, selectedStr) {
-    // This function is no longer needed, as getTurnForDate handles all cases
-    return getTurnForDate(task, selectedStr);
-}
-
-function getTurnForYesterday(task) {
-    const yesterday = new Date();
-    yesterday.setDate(yesterday.getDate() - 1);
-    return getTurnForDate(task, yesterday.toISOString().split("T")[0]);
-}
-
-function getTurnForTomorrow(task) {
-    const tomorrow = new Date();
-    tomorrow.setDate(tomorrow.getDate() + 1);
-    return getTurnForDate(task, tomorrow.toISOString().split("T")[0]);
-}
-
-function getTurnForFutureDate(task, futureStr) {
-    // This function is no longer needed, as getTurnForDate handles future dates
-    return getTurnForDate(task, futureStr);
 }
 
 async function finishTask(userName, task, button, selectedDate) {
@@ -855,11 +832,18 @@ async function finishTask(userName, task, button, selectedDate) {
     // Update turnByDate for today based on completions
     if (!task.turnByDate) task.turnByDate = {};
     const userOrder = [...task.users];
-    let currentIndex = userOrder.indexOf(task.turnByDate[today] || task.turn || userOrder[0]);
+    let currentIndex;
+
+    // Get the turn at the start of today (before this completion)
+    const yesterday = new Date(today);
+    yesterday.setDate(yesterday.getDate() - 1);
+    const yesterdayStr = yesterday.toISOString().split("T")[0];
+    currentIndex = userOrder.indexOf(getTurnForDate(task, yesterdayStr));
     if (currentIndex === -1) currentIndex = 0;
 
-    // Advance turn based on the number of completions today
-    currentIndex = (currentIndex + completionsToday.length) % userOrder.length;
+    // Advance turn based on completions up to this point (including the new one)
+    const advanceCount = Math.min(completionsToday.length, repeatLimit);
+    currentIndex = (currentIndex + advanceCount) % userOrder.length;
     task.turnByDate[today] = userOrder[currentIndex];
 
     // Save to backend
@@ -880,6 +864,38 @@ async function finishTask(userName, task, button, selectedDate) {
     if (typeof loadTasksForDate === 'function') loadTasksForDate(today);
     if (typeof loadUserTasks === 'function') loadUserTasks(userName, today);
     if (typeof loadUserReward === 'function') loadUserReward(userName);
+}
+
+
+
+
+
+
+
+
+
+
+
+function getTurnForPastOrToday(task, selectedStr) {
+    // This function is no longer needed, as getTurnForDate handles all cases
+    return getTurnForDate(task, selectedStr);
+}
+
+function getTurnForYesterday(task) {
+    const yesterday = new Date();
+    yesterday.setDate(yesterday.getDate() - 1);
+    return getTurnForDate(task, yesterday.toISOString().split("T")[0]);
+}
+
+function getTurnForTomorrow(task) {
+    const tomorrow = new Date();
+    tomorrow.setDate(tomorrow.getDate() + 1);
+    return getTurnForDate(task, tomorrow.toISOString().split("T")[0]);
+}
+
+function getTurnForFutureDate(task, futureStr) {
+    // This function is no longer needed, as getTurnForDate handles future dates
+    return getTurnForDate(task, futureStr);
 }
 
 
