--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -760,10 +760,11 @@ function getTurnForDate(task, selectedDateStr) {
     let currentIndex = userOrder.indexOf(task.turn || userOrder[0]);
     if (currentIndex === -1) currentIndex = 0;
 
-    // Calculate turn up to the day before the selected date
     const d = new Date(startDate);
     const selectedDate = new Date(selectedDateStr);
-    while (d < selectedDate) {
+
+    // Calculate turn up to and including the selected date
+    while (d <= selectedDate) {
         const dStr = formatDate(d);
 
         if (turnByDate[dStr]) {
@@ -779,32 +780,23 @@ function getTurnForDate(task, selectedDateStr) {
             for (let i = 0; i < advanceCount; i++) {
                 currentIndex = (currentIndex + 1) % userOrder.length;
             }
+
+            // Persist the turn state for this day in turnByDate (in memory for calculation)
+            if (!task.turnByDate) task.turnByDate = {};
+            task.turnByDate[dStr] = userOrder[currentIndex];
         }
 
         d.setDate(d.getDate() + 1);
     }
 
-    // For the selected date itself
-    if (turnByDate[selectedStr]) {
-        currentIndex = userOrder.indexOf(turnByDate[selectedStr]);
-    } else {
-        const completedUsers = Array.isArray(completions[selectedStr]) ? completions[selectedStr] : [];
+    // For future dates beyond the selected date, assume perfect completions
+    if (selectedStr > todayStr) {
         const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
                            task.repeat === "Weekly" ? task.timesPerWeek || 1 :
                            task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
-
-        // If we're on today or a past date, use the current number of completions
-        if (selectedStr <= todayStr) {
-            const advanceCount = Math.min(completedUsers.length, repeatLimit);
-            for (let i = 0; i < advanceCount; i++) {
-                currentIndex = (currentIndex + 1) % userOrder.length;
-            }
-        } else {
-            // For future dates, assume perfect completions from today onward
-            const daysDiff = Math.floor((selectedDate - new Date(todayStr)) / (1000 * 60 * 60 * 24));
-            for (let i = 0; i < daysDiff * repeatLimit; i++) {
-                currentIndex = (currentIndex + 1) % userOrder.length;
-            }
+        const daysDiff = Math.floor((selectedDate - new Date(todayStr)) / (1000 * 60 * 60 * 24));
+        for (let i = 0; i < daysDiff * repeatLimit; i++) {
+            currentIndex = (currentIndex + 1) % userOrder.length;
         }
     }
 
@@ -832,19 +824,26 @@ async function finishTask(userName, task, button, selectedDate) {
     // Update turnByDate for today based on completions
     if (!task.turnByDate) task.turnByDate = {};
     const userOrder = [...task.users];
-    let currentIndex;
-
-    // Get the turn at the start of today (before this completion)
-    const yesterday = new Date(today);
-    yesterday.setDate(yesterday.getDate() - 1);
-    const yesterdayStr = yesterday.toISOString().split("T")[0];
-    currentIndex = userOrder.indexOf(getTurnForDate(task, yesterdayStr));
+    let currentIndex = userOrder.indexOf(task.turn || userOrder[0]);
     if (currentIndex === -1) currentIndex = 0;
 
-    // Advance turn based on completions up to this point (including the new one)
-    const advanceCount = Math.min(completionsToday.length, repeatLimit);
-    currentIndex = (currentIndex + advanceCount) % userOrder.length;
-    task.turnByDate[today] = userOrder[currentIndex];
+    // Recalculate turn from start date to today to get the correct starting point
+    const startDate = new Date(task.date.split(" to ")[0]);
+    const d = new Date(startDate);
+    while (d <= new Date(today)) {
+        const dStr = formatDate(d);
+        if (task.turnByDate[dStr]) {
+            currentIndex = userOrder.indexOf(task.turnByDate[dStr]);
+        } else {
+            const completedUsers = Array.isArray(task.completions[dStr]) ? task.completions[dStr] : [];
+            const advanceCount = Math.min(completedUsers.length, repeatLimit);
+            for (let i = 0; i < advanceCount; i++) {
+                currentIndex = (currentIndex + 1) % userOrder.length;
+            }
+            task.turnByDate[dStr] = userOrder[currentIndex];
+        }
+        d.setDate(d.getDate() + 1);
+    }
 
     // Save to backend
     await saveTaskToBackend(task);
@@ -865,9 +864,6 @@ async function finishTask(userName, task, button, selectedDate) {
     if (typeof loadUserTasks === 'function') loadUserTasks(userName, today);
     if (typeof loadUserReward === 'function') loadUserReward(userName);
 }
-
-
-
 
 
 
